# FreePPS

./: .gitignore  Cargo.toml  NOTICES  README.md  build_android.py  package_module.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: README.md
docs/en/: README.md
module/: action.sh  customize.sh  freepps-app.sh  module.prop  service.sh
src/: common.rs  constants.rs  error.rs  file_monitor.rs  logger.rs  main.rs  module_manager.rs  monitor.rs  monitoring.rs  pd.rs  pd_verifier.rs  platform.rs
src/common/: constants.rs  error.rs  logger.rs  utils.rs
src/monitoring/: file_monitor.rs  module_manager.rs  threads.rs
src/monitoring/threads/: disable_file.rs  free_file.rs  pd_adapter_verified.rs  pd_verified.rs
src/pd/: pd_adapter_verifier.rs  pd_verifier.rs
src/platform/: signal.rs
