[package]
name = "FreePPS"
version = "1.2.0"
edition = "2024"
authors = ["Seyud"]

[dependencies]
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
lto = false
codegen-units = 256

