[package]
name = "FreePPS"
version = "1.5.3"
edition = "2024"
authors = ["Seyud"]

[dependencies]
libc = "0.2.178"
anyhow = "1.0.100"
thiserror = "2.0.17"
log = "0.4.29"
android_logger = "0.15.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
lto = false
codegen-units = 256

